# agentcoin

./: .gitattributes  .gitignore  Dockerfile  README.ja.md  README.md  README.zh-CN.md  compose.multi-node.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
agentcoin/: __init__.py  __main__.py  adapters.py  ascii_cli.py  bridges.py  cli.py  config.py  discovery.py  gitops.py  local_agents.py  models.py  net.py  node.py  onchain.py  receipts.py  runtimes.py  security.py  semantics.py  store.py  worker.py
configs/: node.example.json  node.frontend-local.json
configs/demo/: node-a.json  node-b.json  node-c.json
contracts/: README.md
contracts/src/: AgentDIDRegistry.sol  BountyEscrow.sol  StakingPool.sol
docs/architecture/: agent-adapters.md  alignment-gap.md  committee-bond-replay.md  dispatch-scoring.md  e2ee-connectivity.md  implementation-roadmap.md  mvp.md  onchain-roadmap.md  poaw-settlement-policy.md
docs/integrations/: openclaw.md
docs/legal/: gpl-notice.md
docs/project/: blueprint-continuous-improvement-checklist.md  chatgpt-backend-alignment.md  codex-frontend-handoff.md  copilot-handoff.md  frontend-ascii-multilingual-plan.md  frontend-copilot-backend-integration.md  frontend-next-slice-roadmap.md  frontend-window-ownership-map.md  multi-node-demo.md  operator-auth-hardening-plan.md  overview.md  remote-deployment-readiness.md  (+1 more)
tests/: test_ascii_cli.py  test_config.py  test_discovery.py  test_net.py  test_node_integration.py  test_store.py
web/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+28 files in other folders)
